bppackaging/src/objects/Vendor_Invoicing_Header__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Vendor Invoicing Header Owners</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Header_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Invoicing Headers</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Invoicing Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>Invoice_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VI-{0000000}</displayFormat>
        <label>Vendor Invoicing Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoicing Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>